[package]
name = "hints"
version = "0.0.1"
authors = [ "hints authors" ]
description = "A library for computing weighted threshold signatures"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

################################# Dependencies ################################

[dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ] }
ark-std = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
paste = { version = "1.0" }
crossbeam = { version = "0.8.2" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]

[profile.dev]
opt-level = 3
